# remme-core

./: .coveragerc  .env  .gitconfig  .gitignore  .gitmodules  .pylintrc  1  BUILD.md  CHANGELOG.md  Dockerfile  Dockerfile.ws  Jenkinsfile  Makefile  NOTICE  README.md  README.rst  blockinfo_fix.patch  docker-compose.debug-rest.yml  docker-compose.debug-tp.yml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.genesis.yml  docker-compose.run.yml  docker-compose.test.yml  docker-compose.yml  genesis.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  shell.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
bash/: .bashrc  genesis.sh  poet-validator-registry.sh  toml-to-env.py  validator.sh
compose/: base.yml  genesis.yml
config/: admin.env  network-config.env  remme-client-config.toml  remme-common-config.toml  remme-genesis-config.toml  remme-log-config.toml  remme-rest-api-log-config.toml  remme-rest-api.toml  remme-rpc-api.toml  sawtooth-validator-config.toml
config/log/: block-info-tp.toml  consensus.toml  remme-rest-api.toml  (+6 more)
docker/: development.dockerfile  release.dockerfile  sawtooth-validator.dockerfile  sawtooth.dockerfile
docker-compose/: Dockerfile  base.yml  build.yml  debug-rest.yml  dev.yml  docs.yml  genesis.yml  logio.yml  run-test.yml  run.yml  test.yml
docs/: architecture.rst  conf.py  consensus-integration.rst  family-account.rst  family-atomic-swap.rst  family-certificate.rst  family-pub-key.rst  index.rst  influxdb.rst  introduction.rst  remme-client.rst  remme-framework.rst  remme-launch.rst  remme-ws-events.rst  remme-ws.rst  rest-api.rst  rpc-api.rst  sawtooth-overview.rst  use-case-web-auth.rst  use-cases.rst  user-guide.rst
genesis/: generate-proposal.sh  generate_token_genesis.py  token-proposal.batch  token-proposal.sh
integration/: consensus-integration.md  docker-compose-build.yml  integration-testing.yml
processor/: Dockerfile  __main__.py  settings.py  setup.py
protos/: account.proto  atomic_swap.proto  certificate.proto  settings.proto  token.proto  transaction.proto  transaction_payload.proto
remme/: __main__.py  settings.py
scripts/: Makefile  certificate_delete.lua  certificate_post.lua  certificate_put.lua  personal_delete.lua  personal_put.lua  protogen.sh  run.sh  token_post.lua
test-configuration-dealer/: Dockerfile  dealer.py  docker-compose-build.yml
testing/: conftest.py
tests/: __init__.py  docker-compose.yml  test_account.py  test_helper.py  test_rest_api.py
utils/: execution_time_stats.py
(+347 files in other folders)
