[tool.poetry]
name = "remme"
version = "0.6.0-alpha"
description = "Distributed Public Key Infrastructure (PKI) protocol"
license = "Apache-2.0"
authors = ["REMME"]
readme = "README.rst"
homepage = "https://remme.io/"
repository = "https://github.com/Remmeauth/remme-core"
documentation = "https://docs.remme.io/"

[tool.poetry.dependencies]
python = "^3.6"

colorlog = "3.1.4"
sawtooth-sdk = "1.0.5"
sawtooth-signing = "1.0.1"
cryptography = "2.3"
protobuf = "3.5.2"
requests = "2.18.4"
pyOpenSSL = "17.5.0"
aiohttp = "3.2.1"
aiohttp-jinja2 = "1.0.0"
aiohttp-cors = "0.7.0"
aiohttp-json-rpc = "0.11.2"
ujson = "1.35"
toml = "0.9.4"
pysha3 = "1.0.2"
aiozmq = "0.7.1"

[tool.poetry.dev-dependencies]
pytest = "4.0.1"
asynctest = "0.12.2"
