[tool.poetry]
name = "remme"
version = "0.6.0-alpha"
description = "Distributed Public Key Infrastructure (PKI) protocol"
license = "Apache-2.0"
authors = ["REMME"]
readme = "README.rst"
homepage = "https://remme.io/"
repository = "https://github.com/Remmeauth/remme-core"
documentation = "https://docs.remme.io/"

[tool.poetry.dependencies]
python = "^3.6"

colorlog = "4.0.2"
sawtooth-sdk = "1.0.5"
sawtooth-signing = "1.0.1"
cryptography = "2.4.2"
protobuf = "3.6.1"
requests = "2.21.0"
pyOpenSSL = "17.5.0"
aiohttp = "3.4.4"
aiohttp-jinja2 = "1.0.0"
aiohttp-cors = "0.7.0"
aiohttp-json-rpc = "0.11.2"
toml = "0.9.4"
pysha3 = "1.0.2"
aiozmq = "0.7.1"

[tool.poetry.dev-dependencies]
asynctest = "0.12.2"
pytest = "4.0.1"
pytest-cov = "2.6.0"
pytest-mock = "1.10.0"
